--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
   "bugs": {
     "url": "https://github.com/jffelix/To-Do-List-Hooks/issues"
   },
-  "homepage": "https://github.com/jffelix/To-Do-List-Hooks#readme"
+  "homepage": "https://github.com/jffelix/To-Do-List-Hooks#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.14",
+    "path": "^0.12.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  }
 }
