--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "nodemon server/index.js",
+    "build": "webpack --config ./webpack.config.js --mode development -w"
   },
   "repository": {
     "type": "git",
@@ -27,7 +25,7 @@
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^3.4.4"
   },
   "browserslist": {
     "production": [
@@ -44,6 +42,7 @@
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
-    "@babel/preset-react": "^7.16.0"
+    "@babel/preset-react": "^7.16.0",
+    "webpack-cli": "^4.9.1"
   }
 }
