--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/jffelix/To-Do-List-Hooks#readme",
   "dependencies": {
     "axios": "^0.24.0",
+    "chai": "^4.3.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
