--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^3.4.4"
+    "react-scripts": "^3.4.4",
+    "requirejs": "^2.3.6"
   },
   "browserslist": {
     "production": [
